new balance behavior

--- a/test_balance_2.ipynb
+++ b/test_balance_2.ipynb
@@ -359,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the previous graph, you can see that Poppy is falling down, because there is an unexpected movement of the head.\n",
+    "# On the previous graph, you can see that Poppy is falling down, because there is an unexpected movement of the head.\n",
     "Now, you need to correct the movement the more quickly it is possible to ovoid the falling down and restaure the balance.\n",
     "To do that we choose to make a movement in the opposite direction of the fall, using the motor abs_x and abs_y.\n",
     "The problem is that we don't know what is the orientation of the motor and for example, we need to know what will be the correction of the abs_x motor.\n",
