add good link to tutorial

--- a/balance_arm.ipynb
+++ b/balance_arm.ipynb
@@ -507,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Changing the reference frame from absolute to a frame relative to poppy (if you want to know more on matrix of rotation, you have [this tutorial](http://www.coppeliarobotics.com/helpFiles/en/eulerAngles.htm). Choosing the frame oriented by visual chest. The graph shows the same movement but in the relative frame and the arms try to decrease the ocillation by balancing the movement in the opposite direction. "
+    "Changing the reference frame from absolute to a frame relative to poppy (if you want to know more on matrix of rotation, you have [this tutorial](http://nbviewer.ipython.org/github/jjehl/poppy_balance/blob/master/tutorial_rotation_matrix.ipynb). Choosing the frame oriented by visual chest. The graph shows the same movement but in the relative frame and the arms try to decrease the ocillation by balancing the movement in the opposite direction. "
    ]
   },
   {
