method for acceleration and position add to balance

--- a/balance_arm.ipynb
+++ b/balance_arm.ipynb
@@ -1082,13 +1082,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "One test more with the possibility to react in function of the position and the acceleration."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# choose the coefficient you want to apply to speed, position and acceleration. (P S A)\n",
+    "P = 300\n",
+    "S = 800\n",
+    "A = 0\n",
+    "\n",
+    "\n",
+    "class IMU:\n",
+    "    def __init__(self,nb_record=10):\n",
+    "        self.record_pos=[]\n",
+    "        i=0\n",
+    "        while i<nb_record:\n",
+    "            self.record_pos.insert(0,0)\n",
+    "            i+=1\n",
+    "            \n",
+    "    def add_pos(self,d_pos):\n",
+    "        size = len(self.record_pos)\n",
+    "        self.record_pos.insert(0,d_pos)\n",
+    "        del self.record_pos[size]\n",
+    "        \n",
+    "    def speed(self):\n",
+    "        return self.record_pos[0]\n",
+    "    \n",
+    "    def acceleration(self):\n",
+    "        return self.record_pos[0]-self.record_pos[1]\n",
+    "    \n",
+    "    def position(self):\n",
+    "        integrate = 0\n",
+    "        for i in self.record_pos:\n",
+    "            integrate += i\n",
+    "        return integrate\n",
+    "\n",
+    "\n",
+    "def rotate_matrix(a,b,g):\n",
+    "    Rx = np.mat([[1,0,0], [0,cos(a),-sin(a)], [0,sin(a),cos(a)]])\n",
+    "    Ry = np.mat([[cos(b),0,sin(b)], [0,1,0], [-sin(b),0,cos(b)]])\n",
+    "    Rz = np.mat([[cos(g),-sin(g),0], [sin(g),cos(g),0], [0,0,1]])\n",
+    "    Rot = Rx*Ry*Rz\n",
+    "    return Rot\n",
+    "\n",
+    "list_pos_x = []\n",
+    "list_pos_y = []\n",
+    "list_pos_z = []\n",
+    "t= []\n",
+    "\n",
+    "pos0 = np.mat(poppy.get_object_position('head_visual')).transpose()\n",
+    "t0 = time.time()\n",
+    "time.sleep(0.01)\n",
+    "\n",
+    "IMU_y = IMU(20)\n",
+    "IMU_z = IMU(20)\n",
+    "\n",
+    "while time.time() - t0 < 120:\n",
+    "    pos1 = np.mat(poppy.get_object_position('head_visual')).transpose()\n",
+    "    if any(pos1 != pos0):\n",
+    "        d_pos = pos1-pos0\n",
+    "        \n",
+    "        #make a rotation to d_pos to transpose the movement in a relative frame (frame of chest_visual)\n",
+    "        orient_chest = poppy.get_object_orientation('chest_visual')\n",
+    "        Rot=rotate_matrix(-orient_chest[0],-orient_chest[1],-orient_chest[2])\n",
+    "        d_pos=Rot*d_pos\n",
+    "        \n",
+    "        # record the speed with the IMU class\n",
+    "        IMU_y.add_pos(float(d_pos[1]))\n",
+    "        IMU_z.add_pos(float(d_pos[2]))\n",
+    "        \n",
+    "        #balance the movement with an opposite movement of the arm\n",
+    "        \n",
+    "        poppy.r_shoulder_y.goal_position = -IMU_y.speed()*S-IMU_y.position()*P-IMU_y.acceleration()*A\n",
+    "        poppy.l_shoulder_y.goal_position = -IMU_y.speed()*S-IMU_y.position()*P-IMU_y.acceleration()*A\n",
+    "        poppy.r_shoulder_x.goal_position = -20+IMU_z.speed()*S+IMU_z.position()*P+IMU_z.acceleration()*A\n",
+    "        poppy.l_shoulder_x.goal_position = 20+IMU_z.speed()*S+IMU_z.position()*P+IMU_z.acceleration()*A\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        list_pos_x.append(float(d_pos[0]))\n",
+    "        list_pos_y.append(float(d_pos[1]))\n",
+    "        list_pos_z.append(float(d_pos[2]))\n",
+    "        t.append(poppy.current_simulation_time)\n",
+    "        pos0 = pos1\n",
+    "    time.sleep(0.01)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "plot(t, list_pos_x)\n",
+    "plot(t, list_pos_y)\n",
+    "plot(t, list_pos_z)\n",
+    "legend(('dx', 'dy','dz'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What can I say, in conclusion. The arm have a major difficulties to balance Poppy because the movement of the arms have two different opposite effects : moving the gravity center and create an inertial force in the opposite direction of the moving of the gravity center. The inertial force is create during the movement but the move of the gravity center is more durable. \n",
+    "The question is how to choose the better parameter for P, S, A and even nb_record to optimize the balance of poppy... no answer at the moment..."
+   ]
   }
  ],
  "metadata": {
