--- a/balance_arm.ipynb
+++ b/balance_arm.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "from poppy.creatures import PoppyHumanoid\n",
     "\n",
-    "poppy = PoppyHumanoid(simulator='vrep')\n",
+    "poppy = PoppyHumanoid(simulator='vrep',scene='poppy_humanoid_add_force.ttt')\n",
     "\n",
     "%pylab inline\n",
     "import time"
