--- a/tutorial_rotation_matrix.ipynb
+++ b/tutorial_rotation_matrix.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -133,9 +133,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4.42259988]\n",
-      " [-0.46532234]\n",
-      " [ 9.01244059]]\n"
+      "[[ 5.82509129]\n",
+      " [ 5.33050168]\n",
+      " [ 6.2172392 ]]\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
     "Rx = np.mat([[1,0,0], [0,cos(a),-sin(a)], [0,sin(a),cos(a)]])\n",
     "Ry = np.mat([[cos(b),0,sin(b)], [0,1,0], [-sin(b),0,cos(b)]])\n",
     "Rz = np.mat([[cos(g),-sin(g),0], [sin(g),cos(g),0], [0,0,1]])\n",
-    "Rot = Rx*Ry*Rz\n",
+    "Rot = Rz*Ry*Rx\n",
     "U_rotate = Rot*U\n",
     "print U_rotate"
    ]
