test present_load on leg

--- a/balance_arm.ipynb
+++ b/balance_arm.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#A method to use an IMU to balance poppy with movements of his arms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -2282,7 +2289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What can I say, in conclusion. The arm have a major difficulties to balance Poppy because the movement of the arms have two different opposite effects : moving the gravity center and create an inertial force in the opposite direction of the moving of the gravity center. The inertial force is create during the movement but the move of the gravity center is more durable. \n",
+    "What can I say, in conclusion : movement of the arm improve the stability but the movement of the arms have two different opposite effects : moving the gravity center and create an inertial force in the opposite direction of the moving of the gravity center. The inertial force is create during the movement but the move of the gravity center is more durable. \n",
     "The question is how to choose the better parameter for P, S, A and even nb_record to optimize the balance of poppy... no answer at the moment..."
    ]
   }
