--- a/balance_leg_math.ipynb
+++ b/balance_leg_math.ipynb
@@ -26,8 +26,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basically, the shin and the thigh form a triangle with a knee angle. So if you determine the angle of the knee, what you want is just to calcul the angle of the ankle and the hip to let Poppy to the verticale position.\n",
-    "![alt text](image/triangle.png)"
+    "Basically, the shin and the thigh form a triangle with a knee angle. So if you determine the angle of the knee, what you want is just to calcul the angle of the ankle and the hip to let Poppy to the verticale position."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](./image/triangle.png)"
    ]
   },
   {
@@ -368,50 +374,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "leg.high_percent=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "leg.r_foot_gap_percent=-1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "leg.l_foot_gap_percent=-1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "leg.speed=3"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 158,
    "metadata": {
     "collapsed": false
@@ -469,383 +431,6 @@
     "time.sleep(3)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7853981852531433"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "leg.right.ankle_limit_front"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min([1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "left - ankle -0.0 knee 0.0 hip -0.0 high 36.0 foot_gap 0.0\n",
-      "right - ankle -0.0 knee 0.0 hip -0.0 high 36.0 foot_gap 0.0\n",
-      "left - ankle -37.3471305358 knee 74.6942610715 hip -37.3471305358 high 28.6190904965 foot_gap 0.0\n",
-      "right - ankle -37.3471305358 knee 74.6942610715 hip -37.3471305358 high 28.6190904965 foot_gap 0.0\n",
-      "left - ankle -0.0 knee 0.0 hip -0.0 high 36.0 foot_gap 0.0\n",
-      "right - ankle -0.0 knee 0.0 hip -0.0 high 36.0 foot_gap 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "leg.high_percent=100\n",
-    "leg.start()\n",
-    "time.sleep(1)\n",
-    "\n",
-    "leg.high_percent=30\n",
-    "leg.start()\n",
-    "time.sleep(1)\n",
-    "\n",
-    "leg.high_percent=100\n",
-    "leg.start()\n",
-    "time.sleep(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "leg.high_percent=100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "leg.r_foot_gap_percent=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "leg.l_foot_gap_percent=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "leg.right.update_foot_gap_percent(leg.high_percent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "math domain error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-51-9e8890e7bb7a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mleg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mright\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate_high_percent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mleg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhigh_percent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-5-84b8082ae9ac>\u001b[0m in \u001b[0;36mupdate_high_percent\u001b[1;34m(self, high_percent)\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[0mhigh1_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mankle_limit_back\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshin\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m         \u001b[0mgap2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfoot_gap\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0msin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mankle_limit_back\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshin\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m         \u001b[0mhigh2_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mthigh\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mgap2\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m         \u001b[0mhigh_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhigh1_min\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mhigh2_min\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[0mhigh_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhigh_max\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mhigh_min\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: math domain error"
-     ]
-    }
-   ],
-   "source": [
-    "leg.right.update_high_percent(leg.high_percent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from pypot.primitive import Primitive\n",
-    "\n",
-    "class leg_test(Primitive):\n",
-    "    def __init__(self,robot,alpha):\n",
-    "        self.robot = robot\n",
-    "        Primitive.__init__(self, robot)\n",
-    "        self.alpha = alpha\n",
-    "        \n",
-    "            \n",
-    "    def run(self):    \n",
-    "        self.robot.l_knee_y.goto_position(self.alpha,1)\n",
-    "        self.robot.r_knee_y.goto_position(self.alpha,1,wait=True)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test_prim = leg_test(poppy,0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_prim.start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test_prim.alpha=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "leg.update_high_percent(80)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "leg=leg_move(poppy.l_ankle_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('ankle',\n",
-       " -11.002998401312711,\n",
-       " 'knee',\n",
-       " 66.41709339552493,\n",
-       " 'hip',\n",
-       " -55.41409499421228,\n",
-       " 'high',\n",
-       " 27.886651734212784,\n",
-       " 'foot_gap',\n",
-       " 11.383482057950538)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"ankle\" ,degrees(leg.ankle),'knee', degrees(leg.knee),'hip', degrees(leg.hip), 'high', leg.high,'foot_gap',leg.foot_gap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "math domain error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-64-2cda79320d5c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mleg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate_high_percent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-5-84b8082ae9ac>\u001b[0m in \u001b[0;36mupdate_high_percent\u001b[1;34m(self, high_percent)\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[0mhigh1_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mankle_limit_back\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshin\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m         \u001b[0mgap2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfoot_gap\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0msin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mankle_limit_back\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshin\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m         \u001b[0mhigh2_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mthigh\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mgap2\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m         \u001b[0mhigh_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhigh1_min\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mhigh2_min\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[0mhigh_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhigh_max\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mhigh_min\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: math domain error"
-     ]
-    }
-   ],
-   "source": [
-    "leg.update_high_percent(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "leg.update_foot_gap_percent(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 351,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "leg.gravity_center_front(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 261,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "time.sleep(1)\n",
-    "poppy.l_ankle_y.goto_position(degrees(leg.ankle),1)\n",
-    "poppy.r_ankle_y.goto_position(degrees(leg.ankle),1)\n",
-    "\n",
-    "poppy.l_knee_y.goto_position(degrees(leg.knee),1)\n",
-    "poppy.r_knee_y.goto_position(degrees(leg.knee),1)\n",
-    "\n",
-    "poppy.l_hip_y.goto_position(degrees(leg.hip),1)\n",
-    "poppy.r_hip_y.goto_position(degrees(leg.hip),1)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "poppy.l_ankle_y.goto_position(degrees(leg.ankle),4)\n",
-    "\n",
-    "poppy.l_knee_y.goto_position(degrees(leg.knee),4)\n",
-    "\n",
-    "poppy.l_hip_y.goto_position(degrees(leg.hip),4)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "poppy.r_ankle_y.goto_position(-degrees(leg.ankle),4)\n",
-    "\n",
-    "poppy.r_knee_y.goto_position(degrees(leg.knee),4)\n",
-    "\n",
-    "poppy.r_hip_y.goto_position(-degrees(leg.hip),4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "poppy.l_ankle_y.goto_position(0,1)\n",
-    "poppy.r_ankle_y.goto_position(0,1)\n",
-    "\n",
-    "poppy.l_knee_y.goto_position(0,1)\n",
-    "poppy.r_knee_y.goto_position(0,1)\n",
-    "\n",
-    "poppy.l_hip_y.goto_position(0,1)\n",
-    "poppy.r_hip_y.goto_position(0,1)"
    ]
   },
   {
